--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "game.js",
   "scripts": {
     "start": "node game.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^27.4.7"
+  }
 }
